2004-04-08  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-account-gui.c (mail_account_gui_build_extra_conf): Fixed up
	a bit to look nicer and make it closer to HIG compliant.

	* em-folder-tree.c (emft_drop_folder): We need to recursively copy
	the dragged folder tree over to the drop location, not just the
	parent folder. We also need to subscribe to the newly created
	folder in some cases.

2004-04-08  Not Zed  <NotZed@Ximian.com>

	* em-format-html.c (efh_format_headers): add the monkey button if
	we're from evolution.  See #52977.
	(emfh_gethttp): cast away a warning.

	* mail-folder-cache.c:
	(update_1folder): VJUNK_FOLDER's dont exist, they're VTRASH
	folders now.

	* em-folder-view.c: remove message_changed stuff from camel folder
	stuff.

	* mail-component.c (mail_component_init): don't setup the search
	context here, wait till its requested.  Fixes #56672.

2004-04-07  Not Zed  <NotZed@Ximian.com>

	* mail-component.c (view_changed_cb): hook to update the info
	label when the folderview changes.

	* em-folder-view.c (emfv_class_init): added 2 signals 'loaded' and
	'changed'.  For when a folder is set/cleared or when some state
	changes.
	(emfv_set_folder): emit LOADED signal when we set the folder.
	(emfv_list_message_selected): emit changed event.
	(emfv_gui_folder_changed): emit changed event.

2004-04-07  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-tree.c (emft_tree_button_press): Check that
	emft_selection_get_selected() returns TRUE before we try to use
	the iter. Fixes bug #56652.
	(emft_popup_delete_response): Same idea here.
	(emft_popup_delete_folder): Same.
	(emft_popup_rename_folder): Same.
	(emft_popup_properties): Same.

	Fix for bug #56538

	* em-folder-view.c (emfv_set_folder_uri): Don't set the preview
	empty here.
	(emfv_set_folder): If the folder is the same as the folder already
	on the emfv, just return. Otherwise clear the preview and continue
	setting the folder as normal.

2004-04-07  Jeffrey Stedfast  <fejj@ximian.com>
